--- a/Orleans.Streams.Kafka/Orleans.Streams.Kafka.csproj
+++ b/Orleans.Streams.Kafka/Orleans.Streams.Kafka.csproj
@@ -3,6 +3,8 @@
     <TargetFramework>net6.0</TargetFramework>
     <Description>Orleans streaming provider for Kafka.</Description>
     <PackageTags>orleans kafka streams providers streamprovider confluent</PackageTags>
+    <PackageId>AElf.Orleans.Streams.Kafka</PackageId>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <LangVersion>10</LangVersion>
   </PropertyGroup>
   <!-- vendor packages -->
@@ -17,11 +19,7 @@
     <PackageReference Include="Confluent.SchemaRegistry.Serdes" Version="1.3.0" />
   </ItemGroup>
   <!-- packages -->
-  <ItemGroup Condition="'$(Configuration)' == 'Release'">
+  <ItemGroup>
     <PackageReference Include="Orleans.Streams.Utils" Version="$(StreamUtilsVersion)" />
-  </ItemGroup>
-  <!-- libraries -->
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
-    <ProjectReference Include="..\..\Orleans.Streams.Utils\Orleans.Streams.Utils\Orleans.Streams.Utils.csproj" />
   </ItemGroup>
 </Project>
