Change project name to AElf.Orleans.Streams.Kafka

--- a/AElf.Orleans.Streams.Kafka/AElf.Orleans.Streams.Kafka.csproj
+++ b/AElf.Orleans.Streams.Kafka/AElf.Orleans.Streams.Kafka.csproj
@@ -6,6 +6,7 @@
     <PackageId>AElf.Orleans.Streams.Kafka</PackageId>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <LangVersion>10</LangVersion>
+    <RootNamespace>Orleans.Streams.Kafka</RootNamespace>
   </PropertyGroup>
   <!-- vendor packages -->
   <ItemGroup>
