--- a/Samples/TestClient/TestClient.csproj
+++ b/Samples/TestClient/TestClient.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Orleans.Streams.Kafka\Orleans.Streams.Kafka.csproj" />
+    <ProjectReference Include="..\..\AElf.Orleans.Streams.Kafka\AElf.Orleans.Streams.Kafka.csproj" />
     <ProjectReference Include="..\TestGrains\TestGrains.csproj" />
   </ItemGroup>
 
